<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/loginPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/d3dc7e93893bd4ad5d73009f763e4a48" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Email"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text_rounded"
        android:drawablePadding="12dp"
        android:hint="Enter your email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text_rounded"
        android:drawablePadding="12dp"
        android:hint="Enter your password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="340dp"
        android:layout_height="76dp"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/montserrat_black"
        android:gravity="center|center_horizontal"
        android:text="EventMe"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_semibold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="logClicked"
        android:text="Login"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/yellow_theme"
        android:fontFamily="@font/montserrat_semibold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="goToRegister"
        android:text="Register"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remindText" />

    <Button
        android:id="@+id/guestButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/yellow_theme"
        android:fontFamily="@font/montserrat_semibold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="goToMain"
        android:text="@string/guestText"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="125dp"
        android:layout_height="52dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:srcCompat="@drawable/ic_ellipsis_solid"
        app:tint="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="125dp"
        android:layout_height="52dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:srcCompat="@drawable/ic_ellipsis_solid"
        app:tint="#FFFFFF" />

    <TextView
        android:id="@+id/remindText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="Don't have an account?"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/errorMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text=""
        android:textColor="@color/yellow_theme"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>