...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView01">

    </SearchView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/montserrat_black"
        android:text="From"
        android:textColor="@color/orange_theme"
...
        android:layout_marginTop="27dp"
        android:fontFamily="@font/montserrat_black"
        android:text="Event Date"
        android:textColor="@color/orange_theme"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_black"
...
