...
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:translationZ="12dp"
...
